<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity"
    android:background="@drawable/purple_neon">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over_string"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/game_over_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/game_over_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/scoreLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_str"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:id="@+id/scoreStr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:id="@+id/gameScore"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="25dp"
        android:layout_below="@id/scoreLayout"
        android:gravity="center"
        android:id="@+id/enterNameLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_name_str"
            android:textSize="15sp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@color/white"
            android:id="@+id/nameEditText"
            android:autofillHints="will be saved in leaderboard"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:id="@+id/buttonsLayout">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/try_again"
            app:backgroundTint="@null"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/menu_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/menu_str"
            app:backgroundTint="@null"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</RelativeLayout>