<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/purple_neon">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_str"
        android:textStyle="bold"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/optionsText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/optionsText"
        android:id="@+id/menu_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/vibLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrations_str"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/vibText"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/vibSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/tilt_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tilt_str"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/tiltText"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/tiltSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/sound_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_str"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/soundText"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/soundSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/lanesLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lanes_str"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/lanesText"/>

            <RelativeLayout
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/custom_spinner"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/numOfLanesSpinner"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:src="@drawable/drop" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/start_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/save_lower_str"
            app:backgroundTint="@null"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/back_lower_str"
            app:backgroundTint="@null"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>