<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardActivity"
    android:orientation="vertical"
    android:background="@drawable/purple_neon">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/scores_title_str"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/leaderboardText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:id="@+id/fragmentsLayout">

        <androidx.fragment.app.FragmentContainerView
            android:name="com.example.myapplication.ScoresTableFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/tableFragment"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/location_str"/>

        <androidx.fragment.app.FragmentContainerView
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/mapFragment"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/back_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@null"
            android:id="@+id/backButton"/>
    </LinearLayout>


</LinearLayout>